--- a/Develop/index.html
+++ b/Develop/index.html
@@ -18,14 +18,12 @@
         </div>
         <div class="card-body">
           <textarea
-            readonly
-            id="password"
-            placeholder="Your Secure Password"
-            aria-label="Generated Password"
-          ></textarea>
+            readonly id="password" placeholder="Your Secure Password"
+            aria-label="Generated Password"></textarea>
         </div>
         <div class="card-footer">
           <button id="generate" class="btn">Generate Password</button>
+          <button class="btn" id="copy" disabled>Copy Password</button>
         </div>
       </div>
     </div>
